improved navigation flow; updated cover;

--- a/client/partials/email.html
+++ b/client/partials/email.html
@@ -7,8 +7,8 @@
 <template name="composeEmail">
 	<div class="email-dialog dialog utility-background">
 		<div class="dialog-heading">
-			<h4>Email me</h4>
-			<a href="#" class="close-button js_close_dialog" title="Close">
+			<h4>Ask me anything</h4>
+			<a href="#" class="close-button js_close_overlay" title="Close">
 				{{> SVGicon name="cross"}}
 			</a>
 		</div>
@@ -35,7 +35,7 @@
 	<div class="success-dialog dialog utility-background">
 		<div class="dialog-heading">
 			<h4>Email sent</h4>
-			<a href="#" class="close-button js_close_dialog" title="Close">
+			<a href="#" class="close-button js_close_overlay" title="Close">
 				{{> SVGicon name="cross"}}
 			</a>
 		</div>
@@ -45,7 +45,7 @@
 			</p>
 		</div>
 		<div class="dialog-controls">
-			<a type="button" class="dialog-cta-btn cta-color js_close_dialog" href="#" title="OK">OK</a>
+			<a type="button" class="dialog-cta-btn cta-color js_close_overlay" href="#" title="OK">OK</a>
 		</div>
 	</div>
 </template>
