--- a/client/partials/icons.html
+++ b/client/partials/icons.html
@@ -35,6 +35,29 @@
 		        </g>
 			</symbol>
 
+			<!-- swipe right -->
+			<symbol id="icn_swipeRight" viewBox="0 0 100 100">
+			    <desc>Swipe right</desc>
+			    <g id="swipeRight" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+		            <g id="swipe_right" fill="currentColor">
+		                <g id="palm-finger" transform="translate(23.000000, 16.000000)">
+	                        <path d="M21,27.1174996 C23.5411314,26.3897518 26.22505,26 29,26 C45.0162577,26 58,38.9837423 58,55 C58,71.0162577 45.0162577,84 29,84 C12.9837423,84 0,71.0162577 0,55 C0,44.4736203 5.60835962,35.2571431 14,30.1756474 L14,34.9981691 C7.92776649,39.5592007 4,46.8209108 4,55 C4,68.8071187 15.1928813,80 29,80 C42.8071187,80 54,68.8071187 54,55 C54,41.1928813 42.8071187,30 29,30 C26.2021981,30 23.511739,30.4595891 21,31.3073899 L21,27.1174996 Z" id="Combined-Shape"></path>
+	                        <rect id="Rectangle-13" x="21" y="7" width="4" height="43"></rect>
+	                        <rect id="Rectangle-13-Copy" x="10" y="7" width="4" height="43"></rect>
+	                        <rect id="Rectangle-13-Copy-2" x="32" y="28.5" width="4" height="21.5"></rect>
+	                        <path d="M17.5,15 C21.6421356,15 25,11.6421356 25,7.5 C25,3.35786438 21.6421356,0 17.5,0 C13.3578644,0 10,3.35786438 10,7.5 C10,11.6421356 13.3578644,15 17.5,15 Z M17.5,11 C19.4329966,11 21,9.43299662 21,7.5 C21,5.56700338 19.4329966,4 17.5,4 C15.5670034,4 14,5.56700338 14,7.5 C14,9.43299662 15.5670034,11 17.5,11 Z" id="Combined-Shape"></path>
+	                        <rect id="Rectangle-13-Copy-3" x="43" y="34" width="4" height="16"></rect>
+	                    </g>
+
+	                    <g id="arrow" transform="translate(41.500000, 8.000000) rotate(-180.000000) translate(-41.500000, -8.000000) translate(26.000000, 0.000000)">
+	                        <rect id="Rectangle-17" fill="currentColor" transform="translate(17.000000, 8.000000) rotate(-90.000000) translate(-17.000000, -8.000000) " x="15" y="-6" width="4" height="28"></rect>
+	                        <path d="M8.94444444,12.5 L12.5,12.5 L4.5,3.5 L-3.5,12.5 L0.0555555556,12.5 L4.5,7.5 L8.94444444,12.5 Z" id="Combined-Shape" fill="currentColor" transform="translate(4.500000, 8.000000) rotate(-90.000000) translate(-4.500000, -8.000000) "></path>
+	                    </g>
+
+		            </g>
+		        </g>
+			</symbol>
+
 			<!-- horizontal swipe -->
 			<symbol id="icn_swipeHorizontal" viewBox="0 0 100 100">
 		        <g id="swipe_horizontal_icn"  stroke="none" stroke-width="1" fill="currentColor" fill-rule="evenodd">
@@ -223,6 +246,26 @@
 		        </g>
 			</symbol>
 
+			<symbol id="icn_arrowKeyLeft" viewBox="0 0 100 100">
+				<g id="keyboard-left" stroke="none" stroke-width="1" fill-rule="evenodd" fill="currentColor">
+				    <g id="Group-3-Copy" transform="translate(50.000000, 67.000000) rotate(-180.000000) translate(-50.000000, -67.000000) translate(34.000000, 51.000000)">
+				        <path d="M-1.91846539e-13,4.0042577 C-1.91846539e-13,1.79276724 1.78902751,0 4.0042577,0 L27.9957423,0 C30.2072328,0 32,1.78902751 32,4.0042577 L32,27.9957423 C32,30.2072328 30.2109725,32 27.9957423,32 L4.0042577,32 C1.79276724,32 -1.91846539e-13,30.2109725 -1.91846539e-13,27.9957423 L-1.91846539e-13,4.0042577 Z M2,3.99124431 C2,2.89151044 2.89989752,2 3.99124431,2 L28.0087557,2 C29.1084896,2 30,2.89989752 30,3.99124431 L30,28.0087557 C30,29.1084896 29.1001025,30 28.0087557,30 L3.99124431,30 C2.89151044,30 2,29.1001025 2,28.0087557 L2,3.99124431 Z" id="Combined-Shape-Copy" transform="translate(16.000000, 16.000000) rotate(-450.000000) translate(-16.000000, -16.000000) "></path>
+				        <path d="M20.4444444,20 L24,20 L16,11 L8,20 L11.5555556,20 L16,15 L20.4444444,20 Z" id="Combined-Shape" transform="translate(16.000000, 15.500000) rotate(-360.000000) translate(-16.000000, -15.500000) "></path>
+				    </g>
+				    <g id="Group-3" transform="translate(34.000000, 17.000000)">
+				        <path d="M-1.91846539e-13,4.0042577 C-1.91846539e-13,1.79276724 1.78902751,0 4.0042577,0 L27.9957423,0 C30.2072328,0 32,1.78902751 32,4.0042577 L32,27.9957423 C32,30.2072328 30.2109725,32 27.9957423,32 L4.0042577,32 C1.79276724,32 -1.91846539e-13,30.2109725 -1.91846539e-13,27.9957423 L-1.91846539e-13,4.0042577 Z M2,3.99124431 C2,2.89151044 2.89989752,2 3.99124431,2 L28.0087557,2 C29.1084896,2 30,2.89989752 30,3.99124431 L30,28.0087557 C30,29.1084896 29.1001025,30 28.0087557,30 L3.99124431,30 C2.89151044,30 2,29.1001025 2,28.0087557 L2,3.99124431 Z" id="Combined-Shape-Copy" transform="translate(16.000000, 16.000000) rotate(-450.000000) translate(-16.000000, -16.000000) "></path>
+				        <path d="M20.4444444,20 L24,20 L16,11 L8,20 L11.5555556,20 L16,15 L20.4444444,20 Z" id="Combined-Shape" transform="translate(16.000000, 15.500000) rotate(-360.000000) translate(-16.000000, -15.500000) "></path>
+				    </g>
+				    <g id="Group-2" transform="translate(84.000000, 67.000000) rotate(-180.000000) translate(-84.000000, -67.000000) translate(68.000000, 51.000000)">
+				        <path d="M0,4.0042577 C0,1.79276724 1.78902751,0 4.0042577,0 L27.9957423,0 C30.2072328,0 32,1.78902751 32,4.0042577 L32,27.9957423 C32,30.2072328 30.2109725,32 27.9957423,32 L4.0042577,32 C1.79276724,32 0,30.2109725 0,27.9957423 L0,4.0042577 Z M2,3.99124431 C2,2.89151044 2.89989752,2 3.99124431,2 L28.0087557,2 C29.1084896,2 30,2.89989752 30,3.99124431 L30,28.0087557 C30,29.1084896 29.1001025,30 28.0087557,30 L3.99124431,30 C2.89151044,30 2,29.1001025 2,28.0087557 L2,3.99124431 Z" id="Combined-Shape-Copy-2" transform="translate(16.000000, 16.000000) rotate(-180.000000) translate(-16.000000, -16.000000) "></path>
+				        <polygon id="Combined-Shape" transform="translate(16.000000, 16.500000) rotate(-270.000000) translate(-16.000000, -16.500000) " points="11.5555556 12 8 12 16 21 24 12 20.4444444 12 16 17"></polygon>
+				    </g>
+				    <g id="Group" transform="translate(16.000000, 67.000000) rotate(-180.000000) translate(-16.000000, -67.000000) translate(0.000000, 51.000000)">
+				        <path d="M0,4.0042577 C0,1.79276724 1.78902751,0 4.0042577,0 L27.9957423,0 C30.2072328,0 32,1.78902751 32,4.0042577 L32,27.9957423 C32,30.2072328 30.2109725,32 27.9957423,32 L4.0042577,32 C1.79276724,32 0,30.2109725 0,27.9957423 L0,4.0042577 Z M11.5,21.4444444 L11.5,25 L20.5,17 L11.5,9 L11.5,12.5555556 L16.5,17 L11.5,21.4444444 Z" id="Combined-Shape"></path>
+				    </g>
+				</g>
+			</symbol>
+
 			<!-- horizontal arrow keys -->
 
 			<symbol id="icn_keysHorizontal" viewBox="0 0 100 100">
@@ -270,22 +313,24 @@
 
 
 			<!-- arrow key up  -->
-			<symbol id="icn_arrowKeyUp">
-				<g id="keyboard-up" stroke="none" stroke-width="1"  fill-rule="evenodd" fill="currentColor">
-				    <g id="Group-2" transform="translate(0.000000, 51.000000)">
-				        <path d="M0,4.0042577 C0,1.79276724 1.78902751,0 4.0042577,0 L27.9957423,0 C30.2072328,0 32,1.78902751 32,4.0042577 L32,27.9957423 C32,30.2072328 30.2109725,32 27.9957423,32 L4.0042577,32 C1.79276724,32 0,30.2109725 0,27.9957423 L0,4.0042577 Z M2,3.99124431 C2,2.89151044 2.89989752,2 3.99124431,2 L28.0087557,2 C29.1084896,2 30,2.89989752 30,3.99124431 L30,28.0087557 C30,29.1084896 29.1001025,30 28.0087557,30 L3.99124431,30 C2.89151044,30 2,29.1001025 2,28.0087557 L2,3.99124431 Z" id="Combined-Shape-Copy-2" transform="translate(16.000000, 16.000000) rotate(-180.000000) translate(-16.000000, -16.000000) "></path>
-				        <polygon id="Combined-Shape" transform="translate(16.000000, 16.500000) rotate(-270.000000) translate(-16.000000, -16.500000) " points="11.5555556 12 8 12 16 21 24 12 20.4444444 12 16 17"></polygon>
-				    </g>
-				    <g id="Group" transform="translate(68.000000, 51.000000)">
-				        <path d="M0,4.0042577 C0,1.79276724 1.78902751,0 4.0042577,0 L27.9957423,0 C30.2072328,0 32,1.78902751 32,4.0042577 L32,27.9957423 C32,30.2072328 30.2109725,32 27.9957423,32 L4.0042577,32 C1.79276724,32 0,30.2109725 0,27.9957423 L0,4.0042577 Z M2,3.99124431 C2,2.89151044 2.89989752,2 3.99124431,2 L28.0087557,2 C29.1084896,2 30,2.89989752 30,3.99124431 L30,28.0087557 C30,29.1084896 29.1001025,30 28.0087557,30 L3.99124431,30 C2.89151044,30 2,29.1001025 2,28.0087557 L2,3.99124431 Z" id="Combined-Shape"></path>
-				        <polygon id="Combined-Shape-Copy-3" transform="translate(16.000000, 17.000000) rotate(-90.000000) translate(-16.000000, -17.000000) " points="11.5555556 12.5 8 12.5 16 21.5 24 12.5 20.4444444 12.5 16 17.5"></polygon>
-				    </g>
-				    <g id="Group-3-Copy" transform="translate(50.000000, 67.000000) rotate(-180.000000) translate(-50.000000, -67.000000) translate(34.000000, 51.000000)">
-				        <path d="M-1.91846539e-13,4.0042577 C-1.91846539e-13,1.79276724 1.78902751,0 4.0042577,0 L27.9957423,0 C30.2072328,0 32,1.78902751 32,4.0042577 L32,27.9957423 C32,30.2072328 30.2109725,32 27.9957423,32 L4.0042577,32 C1.79276724,32 -1.91846539e-13,30.2109725 -1.91846539e-13,27.9957423 L-1.91846539e-13,4.0042577 Z M2,3.99124431 C2,2.89151044 2.89989752,2 3.99124431,2 L28.0087557,2 C29.1084896,2 30,2.89989752 30,3.99124431 L30,28.0087557 C30,29.1084896 29.1001025,30 28.0087557,30 L3.99124431,30 C2.89151044,30 2,29.1001025 2,28.0087557 L2,3.99124431 Z" id="Combined-Shape-Copy" transform="translate(16.000000, 16.000000) rotate(-450.000000) translate(-16.000000, -16.000000) "></path>
-				        <path d="M20.4444444,20 L24,20 L16,11 L8,20 L11.5555556,20 L16,15 L20.4444444,20 Z" id="Combined-Shape" transform="translate(16.000000, 15.500000) rotate(-360.000000) translate(-16.000000, -15.500000) "></path>
-				    </g>
-				    <path d="M61.9957423,17 C64.2072328,17 66,18.7890275 66,21.0042577 L66,44.9957423 C66,47.2072328 64.2109725,49 61.9957423,49 L38.0042577,49 C35.7927672,49 34,47.2109725 34,44.9957423 L34,21.0042577 C34,18.7927672 35.7890275,17 38.0042577,17 L61.9957423,17 Z M45.5555556,29 L42,29 L50,38 L58,29 L54.4444444,29 L50,34 L45.5555556,29 Z" id="Combined-Shape-Copy-4" transform="translate(50.000000, 33.000000) rotate(-180.000000) translate(-50.000000, -33.000000) "></path>
-				</g>
+			<symbol id="icn_arrowKeyUp" viewBox="0 0 100 100">
+				<desc>Arrow key up</desc>
+				<defs></defs>
+			    <g id="keyboard-up" stroke="none" stroke-width="1" fill-rule="evenodd" fill="currentColor">
+			        <g id="Group-2" transform="translate(0.000000, 51.000000)">
+			            <path d="M0,4.0042577 C0,1.79276724 1.78902751,0 4.0042577,0 L27.9957423,0 C30.2072328,0 32,1.78902751 32,4.0042577 L32,27.9957423 C32,30.2072328 30.2109725,32 27.9957423,32 L4.0042577,32 C1.79276724,32 0,30.2109725 0,27.9957423 L0,4.0042577 Z M2,3.99124431 C2,2.89151044 2.89989752,2 3.99124431,2 L28.0087557,2 C29.1084896,2 30,2.89989752 30,3.99124431 L30,28.0087557 C30,29.1084896 29.1001025,30 28.0087557,30 L3.99124431,30 C2.89151044,30 2,29.1001025 2,28.0087557 L2,3.99124431 Z" id="Combined-Shape-Copy-2" transform="translate(16.000000, 16.000000) rotate(-180.000000) translate(-16.000000, -16.000000) "></path>
+			            <polygon id="Combined-Shape" transform="translate(16.000000, 16.500000) rotate(-270.000000) translate(-16.000000, -16.500000) " points="11.5555556 12 8 12 16 21 24 12 20.4444444 12 16 17"></polygon>
+			        </g>
+			        <g id="Group" transform="translate(68.000000, 51.000000)">
+			            <path d="M0,4.0042577 C0,1.79276724 1.78902751,0 4.0042577,0 L27.9957423,0 C30.2072328,0 32,1.78902751 32,4.0042577 L32,27.9957423 C32,30.2072328 30.2109725,32 27.9957423,32 L4.0042577,32 C1.79276724,32 0,30.2109725 0,27.9957423 L0,4.0042577 Z M2,3.99124431 C2,2.89151044 2.89989752,2 3.99124431,2 L28.0087557,2 C29.1084896,2 30,2.89989752 30,3.99124431 L30,28.0087557 C30,29.1084896 29.1001025,30 28.0087557,30 L3.99124431,30 C2.89151044,30 2,29.1001025 2,28.0087557 L2,3.99124431 Z" id="Combined-Shape"></path>
+			            <polygon id="Combined-Shape-Copy-3" transform="translate(16.000000, 17.000000) rotate(-90.000000) translate(-16.000000, -17.000000) " points="11.5555556 12.5 8 12.5 16 21.5 24 12.5 20.4444444 12.5 16 17.5"></polygon>
+			        </g>
+			        <g id="Group-3-Copy" transform="translate(50.000000, 67.000000) rotate(-180.000000) translate(-50.000000, -67.000000) translate(34.000000, 51.000000)">
+			            <path d="M-1.91846539e-13,4.0042577 C-1.91846539e-13,1.79276724 1.78902751,0 4.0042577,0 L27.9957423,0 C30.2072328,0 32,1.78902751 32,4.0042577 L32,27.9957423 C32,30.2072328 30.2109725,32 27.9957423,32 L4.0042577,32 C1.79276724,32 -1.91846539e-13,30.2109725 -1.91846539e-13,27.9957423 L-1.91846539e-13,4.0042577 Z M2,3.99124431 C2,2.89151044 2.89989752,2 3.99124431,2 L28.0087557,2 C29.1084896,2 30,2.89989752 30,3.99124431 L30,28.0087557 C30,29.1084896 29.1001025,30 28.0087557,30 L3.99124431,30 C2.89151044,30 2,29.1001025 2,28.0087557 L2,3.99124431 Z" id="Combined-Shape-Copy" transform="translate(16.000000, 16.000000) rotate(-450.000000) translate(-16.000000, -16.000000) "></path>
+			            <path d="M20.4444444,20 L24,20 L16,11 L8,20 L11.5555556,20 L16,15 L20.4444444,20 Z" id="Combined-Shape" transform="translate(16.000000, 15.500000) rotate(-360.000000) translate(-16.000000, -15.500000) "></path>
+			        </g>
+			        <path d="M61.9957423,17 C64.2072328,17 66,18.7890275 66,21.0042577 L66,44.9957423 C66,47.2072328 64.2109725,49 61.9957423,49 L38.0042577,49 C35.7927672,49 34,47.2109725 34,44.9957423 L34,21.0042577 C34,18.7927672 35.7890275,17 38.0042577,17 L61.9957423,17 Z M45.5555556,29 L42,29 L50,38 L58,29 L54.4444444,29 L50,34 L45.5555556,29 Z" id="Combined-Shape-Copy-4" transform="translate(50.000000, 33.000000) rotate(-180.000000) translate(-50.000000, -33.000000) "></path>
+			    </g>
 			</symbol>
 							
 
@@ -334,6 +379,17 @@
 			</symbol>
 
 
+			<!-- search -->
+			<symbol id="icn_search" viewBox="0 0 100 100">
+			    <desc>Email</desc>
+			    <g id="search" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+		            <g id="search" fill="currentColor">
+		                <path d="M64.0433596,69.8717867 C58.9486934,74.3113524 52.2883304,77 45,77 C28.9837423,77 16,64.0162577 16,48 C16,31.9837423 28.9837423,19 45,19 C61.0162577,19 74,31.9837423 74,48 C74,55.2883304 71.3113524,61.9486934 66.8717867,67.0433596 L83.0330086,83.2045815 L80.2045815,86.0330086 L64.0433596,69.8717867 Z M45,73 C58.8071187,73 70,61.8071187 70,48 C70,34.1928813 58.8071187,23 45,23 C31.1928813,23 20,34.1928813 20,48 C20,61.8071187 31.1928813,73 45,73 Z" id="Combined-Shape"></path>
+		                <path d="M66,48 C66,36.4020203 56.5979797,27 45,27 L45,30.4482759 C54.6935496,30.4482759 62.5517241,38.3064504 62.5517241,48 L66,48 Z" id="Combined-Shape"></path>
+		            </g>
+		        </g>
+			</symbol>
+
 			<!-- arrow next -->
 			<symbol id="icn_arrowNext" viewBox="0 0 100 100">
 			    <desc>Arrow next</desc>
@@ -341,6 +397,21 @@
 			    <g id="arrowNext" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 			        <g id="arrow-next" fill="currentColor">
 			            <g id="Imported-Layers" transform="translate(50.500000, 50.000000) rotate(90.000000) translate(-50.500000, -50.000000) translate(22.000000, 0.000000)">
+			                <polygon id="Fill-1" points="52.3226667 50 2.828 99.4946667 0 96.6666667 49.4946667 47.172"></polygon>
+			                <polygon id="Fill-2" points="49.4946667 52.828 -1.0658141e-14 3.33333333 2.828 0.505333333 52.3226667 50"></polygon>
+			                <polygon id="Fill-3" points="53 -5.87582871e-15 57 -5.87582871e-15 57 100 53 100"></polygon>
+			            </g>
+			        </g>
+			    </g>
+			</symbol>
+
+			<!-- arrow base -->
+			<symbol id="icn_arrowBase" viewBox="0 0 100 100">
+			    <desc>Arrow</desc>
+			    <defs></defs>
+			    <g id="arrowNext" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+			        <g id="arrow-next" fill="currentColor">
+			            <g id="Imported-Layers" transform="translate(50.500000, 50.000000) translate(-50.500000, -50.000000) translate(22.000000, 0.000000)">
 			                <polygon id="Fill-1" points="52.3226667 50 2.828 99.4946667 0 96.6666667 49.4946667 47.172"></polygon>
 			                <polygon id="Fill-2" points="49.4946667 52.828 -1.0658141e-14 3.33333333 2.828 0.505333333 52.3226667 50"></polygon>
 			                <polygon id="Fill-3" points="53 -5.87582871e-15 57 -5.87582871e-15 57 100 53 100"></polygon>
@@ -536,8 +607,8 @@
 
 <template name="SVGicon">
 	<div class="svg-icon">
-		<svg class="icon-use">
-			<use xlink:href="#icn_{{name}}" x="{{x}}" y="{{y}}" width="{{width}}" height="{{height}}" class="{{class}}" style="{{style}}"/>
+		<svg class="icon-use" style="transform: {{transform}}">
+			<use xlink:href="#icn_{{name}}" x="{{x}}" y="{{y}}" width="{{width}}" height="{{height}}" class="{{class}}"/>
 		</svg>
 	</div>
 </template>
