--- a/client/styles/_animations.scss
+++ b/client/styles/_animations.scss
@@ -21,42 +21,20 @@
 			}
 		}
 	}
-
-	// .slide{
-	// 	.svg-graphics{
-	// 		@include slideInLeft ($duration:$duration);
-	// 		// @include count (infinite);
-	// 	}
-
-	// 	.slide-text{
-	// 		@include slideInDown ($duration:$duration);
-	// 		// @include count (infinite);
-	// 	}
-
-	// 	.slide-btn{
-	// 		@include slideInUp ($duration:$duration);
-	// 		// @include count (infinite);
-	// 	}
-
-	// 	&.animate-out{
-	// 		.svg-graphics{
-	// 			@include slideOutLeft ($duration:$duration);
-	// 			// @include count (infinite);
-	// 		}
-
-	// 		.slide-text{
-	// 			@include slideOutUp ($duration:$duration);
-	// 			// @include count (infinite);
-	// 		}
-
-	// 		.slide-btn{
-	// 			@include slideOutDown ($duration:$duration);
-	// 			// @include count (infinite);
-	// 		}
-	// 	}
-	// }
 }
 
+.gallery{
+	.item{
+		a:hover, a:focus {
+			box-shadow: 0 0 $space rgba($black-copy, .5);
+			transform: translate(-$space/4, -$space/4) scale(1.05);
+		}
+
+		h4{
+			background-color: rgba($black-copy, .5);
+		}
+	}
+}
 
 // animation and transitions
 
@@ -94,24 +72,6 @@ a{
 		transition-property: transform, box-shadow, width;
 		transition-duration: $duration/2;
 		transition-timing-function: ease-in-out;
-	}
-}
-
-
-.mini-nav {
-	&.animate-in{
-		@include slideInRight($duration:$duration);
-		.mini-nav-btn{
-			@for $i from 1 through 10 {
-				&:nth-child(1n+#{$i}){
-					@include slideInRight($duration:$duration, $delay:$delay/$i);
-				}
-			}
-		}
-	}
-
-	&.animate-out{
-		@include slideOutRight($duration:$duration);
 	}
 }
 
@@ -243,16 +203,7 @@ a{
 	}
 }
 
-.menu-overlay{
-	&.animate-in{
-		@include fadeInRight($duration:$duration);
-	}
-	&.animate-out{
-		@include fadeOutLeft($duration:$duration);
-	}
-}
-
-.top-level-navigation{
+.navigation-wrap{
 	&.animate-in{
 		@include slideInRight($duration:$duration);
 	}
@@ -275,168 +226,53 @@ a{
 	}
 }
 
-// .page{
-// 	// .content-plate, .category-title{
-// 	// 	@include slideInLeft($duration:$duration);
-// 	// }
-// 	.animate-off-screen:not(.animate-in-progress){
-// 		display: none;
-// 	}
+.page{
+	&.animate-in{
 
-// 	.animate-in{
-// 		.mini-nav{
-// 			@include slideInDown($duration:$duration);
-// 		}
-// 		.mini-nav-btn{
-// 			@include slideInRight($duration:$duration);
-// 			@for $i from 1 through 10 {
-// 				&:nth-child(1n+#{$i}){
-// 					@include delay($delay/$i + $duration/$i);
-// 				}
-// 			}
-// 		}
-// 	}
+		@include fadeIn($duration:$duration);
 
-// 	.animate-out{
-// 		.mini-nav{
-// 			@include slideOutUp($duration:$duration);
-// 		}
-// 		.mini-nav-btn{
-// 			@include slideOutRight($duration:$duration);
-// 			@for $i from 1 through 10 {
-// 				&:nth-child(1n+#{$i}){
-// 					@include delay($delay*$i/2);
-// 				}
-// 			}
-// 		}
-// 	}
-// 	.gallery{
-// 		&, &.animate-in{
-// 			.item{
-// 				@include fadeIn($duration:$duration);
+		&.up{
+			@include animation-name(slideInDown);
+		}
+		&.down{
+			@include animation-name(slideInUp);
+		}
+		&.left{
+			@include animation-name(slideInRight);
+		}
+		&.right{
+			@include animation-name(slideInLeft);
+		}
+	}
+	&.animate-out{
+		@include fadeOut($duration:$duration);
 
-// 				@for $i from 1 through 20 {
-// 					&:nth-child(1n+#{$i}){
-// 						@include delay($delay*$i);
-// 					}
-// 				}
-// 			}
-// 		}
-// 		&.animate-out{
-// 			.item{
-// 				@include fadeOut($duration:$duration);
-				
-// 				@for $i from 1 through 20 {
-// 					&:nth-child(1n+#{$i}){
-// 						@include delay($delay/$i);
-// 					}
-// 				}
-// 			}	
-// 		}
-// 	}
-// 	.project-cover, .project-page{
-// 		.content-plate{
-// 			&, &.animate-in{
-// 				@include slideInUp($duration:$duration);
-// 				&.full-height{
-// 					@include duration($duration*2);
-// 				}
-// 			}
-// 			&.animate-out{
-// 				@include slideOutDown($duration:$duration);
-// 				&.full-height{
-// 					@include duration($duration*2);
-// 				}
-// 			}
-// 		}
-// 		.date-container{
-// 			&, &.animate-in{
-// 				@include slideInDown($duration:$duration);
-// 			}
-// 			&.animate-out{
-// 				@include slideOutUp($duration:$duration);
-// 			}
-// 		}
-// 		.nav-container{
-// 			.nav-plate{
-// 				@include slideInRight($duration:$duration);
-// 				@for $i from 0 through 2 {
-// 					&:nth-child(1n+#{$i}){
-// 						@media screen and (min-width: $fg-sm) {
-// 							@include delay($delay + $delay/2 * $i);
-// 						}
-// 					}
-// 				}
-// 			}
-// 			.title-plate{
-// 				@include slideInRight($delay:$delay*2, $duration:$duration);
-// 				@media screen and (min-width: $fg-sm) {
-// 					@include delay($delay);
-// 				}
-// 			}
+		&.up{
+			@include animation-name(slideOutDown);
+		}
+		&.down{
+			@include animation-name(slideOutUp);
+		}
+		&.left{
+			@include animation-name(slideOutRight);
+		}
+		&.right{
+			@include animation-name(slideOutLeft);
+		}
+	}
+}
 
-			
-// 			.title-plate, .nav-plate, .mini-nav-btn{
-// 				@media screen and (max-width: $fg-sm - 1) {
-// 					@include animation-name(slideInDown);
-// 					@include delay($delay);
-// 				}
-// 			}
-// 		}
-// 	}
-// 	.category-cover{
+.dropdown{
+	.dropdown-content{
+		.dropdown-item{
+			@include fadeIn($duration:$duration);
+		}
 
-// 		&.animate-in{
-// 			.item-list{
-// 				.item{
-// 					@include slideInDown($delay:$delay, $duration:$duration);
-// 					@for $i from 1 through 10 {
-// 						&:nth-child(1n+#{$i}){
-// 							@include delay($delay*$i + $duration/2);
-// 						}
-// 					}
-// 				}
-// 			}
-
-// 			.summary{
-// 				@include slideInLeft($delay:$delay*2, $duration:$duration);
-// 			}
-// 		}
-
-// 		&.animate-out{
-// 			.item-list{
-// 				.item{
-// 					@include slideOutUp($delay:$delay, $duration:$duration);
-// 					@for $i from 2 through 10 {
-// 						&:nth-child(1n+#{$i}){
-// 							@include delay($delay/$i);
-// 						}
-// 					}
-// 				}
-// 			}
-// 		}
-		
-// 	}
-// 	.background{
-// 		&, &.animate-in{
-// 			@include fadeIn($duration:$duration, $delay:$delay);
-// 		}
-// 		&.animate-out{
-// 			@include fadeOut($duration:$duration, $delay:$delay);
-// 		}
-// 	}
-// 	.back-cover{
-// 		.keep-in-touch{
-// 			&.animate-sent{
-// 				@include lightSpeedOut($duration:$duration);
-// 				&.animate-error{
-// 					@include bounceInRight($duration:$duration);		
-// 				}
-// 			}
-// 			&.animate-error{
-// 				@include shake($duration:$duration*2, $delay:$duration);
-// 			}
-// 		}
-// 	}
-// }
+		&.collapsed{
+			.dropdown-item:not(.active){
+				@include fadeOut($duration:$duration);
+			}
+		}
+	}
+}
 
