--- a/client/styles/_form.scss
+++ b/client/styles/_form.scss
@@ -4,7 +4,57 @@
 	align-items:center;
 }
 
+.search-overlay{
+	@extend .active-overlay;
+	@extend .fg-row;
+	// align-items:center;
+	background-color: rgba($black-copy, 0.99);
+	.wrap{
+		flex-direction:row;
+		flex-wrap:wrap;
+		justify-content: space-around;
+		align-items: flex-start;
+		.close-btn{
+			@extend .fg-col-xs-12;
+			align-self:flex-start;
+			text-align: right;
+		}
+	}
+	.search-dialog{
+		align-self:flex-start;
 
+		@media screen and (min-width: $fg-sm) {
+			margin-left: 8.33333%;
+			margin-right: 8.33333%;
+		}
+
+		label, input{
+			width: 100%;
+		}
+	}
+	.search-results{
+		@extend .fg-col-xs-12;
+		@extend .fg-col-sm-10;
+		// @extend .fg-off-sm-1;
+		padding: 0;
+
+		@media screen and (min-width: $fg-sm) {
+			margin-left: 8.33333%;
+			margin-right: 8.33333%;
+		}
+
+		.loading{
+			width: 100%;
+			height: 100%;
+
+			.loader-container{
+				margin-top: 5%;
+			}
+		}
+		// flex-basis:75%;
+		// flex-grow:0;
+	}
+}
 // dialog box layout
 
 .dialog{
