--- a/client/styles/_partials.scss
+++ b/client/styles/_partials.scss
@@ -7,6 +7,11 @@
 	-webkit-margin-start: 0;
 	-webkit-margin-end: 0;
 	-webkit-padding-start: 0;
+	-moz-margin-before: 0;
+	-moz-margin-after: 0;
+	-moz-margin-start: 0;
+	-moz-margin-end: 0;
+	-moz-padding-start: 0;
 
 }
 
@@ -68,52 +73,7 @@
 }
 
 
-.preloading{
-	background-color: black;
-}
 
-.loading{
-
-	$cube-side: 50px;
-	$cube-gutter: $cube-side/10;
-	width: 100vw;
-	height: 100vh;
-	overflow: hidden;
-	display: block;
-	position: relative;
-
-	.loader-container{
-
-		$size: $cube-side*3 + $cube-gutter*6;
-		width: $size;
-		height: $size;
-		// position: absolute;
-		margin: 0 auto;
-		margin-top: 30%;
-		@media screen and (min-height: $size*6) {
-			margin-top: calc(50% - #{$size*1.5});
-		}
-		@include animation-name (loading);
-		@include count(infinite);
-		@include duration(1.1s);
-		@include function(linear);
-
-		.cube{
-
-			background-color: gray;
-			width: $cube-side;
-			height: $cube-side;
-			margin: $cube-gutter;
-			float: left;
-			@include animation-name (loading);
-			@include count(infinite);
-			@include duration(1s);
-			@include function(linear);
-			@include animation-direction(reverse);
-
-		}
-	}
-}
 
 // loading state animation
 
@@ -187,6 +147,11 @@
 	}
 }
 
+.placeholder-element{
+	visibility: hidden;
+	pointer-events:none;
+}
+
 
 .active-overlay{
 
@@ -202,6 +167,23 @@
 	min-width: 100vw;
 	max-height: 100vh;
 	min-height: 100%;
+
+	.wrap{
+
+		height: 100vh;
+		@extend .fg-col-xs;
+		color: $white;
+		align-items: center;
+		justify-content: center;
+
+		.close-btn{
+			a{
+				margin: $space*2;
+			}
+			align-self: flex-end;
+			pointer-events:all;
+		}
+	}
 
 }
 
