--- a/client/partials/menu.html
+++ b/client/partials/menu.html
@@ -183,14 +183,14 @@
 	{{#dropdown}}
 		{{#each year in years}}
 			{{#if isCurrentYear year.year}}
-				{{#dropdownTrigerItem}}
-					<a class="menu-item-link" href="/portfolio/year/{{year.year}}" style="background-color:{{year.color}};" title="{{year.year}}">
+				{{#dropdownTrigerItem color=year.color}}
+					<a class="menu-item-link" href="/portfolio/year/{{year.year}}" title="{{year.year}}">
 						<h5><span class="tab-name">{{year.year}}</span></h5>
 					</a>
 				{{/dropdownTrigerItem}}
 			{{else}}
-				{{#dropdownItem}}
-					<a class="menu-item-link" href="/portfolio/year/{{year.year}}" style="background-color:{{year.color}};" title="{{year.year}}">
+				{{#dropdownItem color=year.color}}
+					<a class="menu-item-link" href="/portfolio/year/{{year.year}}" title="{{year.year}}">
 						<h5><span class="tab-name">{{year.year}}</span></h5>
 					</a>
 				{{/dropdownItem}}
@@ -203,14 +203,14 @@
 	{{#dropdown}}
 		{{#each category in categories}}
 			{{#if isCurrentCategory category.slug}}
-				{{#dropdownTrigerItem}}
-					<a class="menu-item-link" href="/portfolio/{{category.slug}}" style="background-color:{{category.color}};" title="{{category.title}}">
+				{{#dropdownTrigerItem color=category.color}}
+					<a class="menu-item-link" href="/portfolio/{{category.slug}}" title="{{category.title}}">
 						<h5><span class="tab-name">{{category.title}}</span></h5>
 					</a>
 				{{/dropdownTrigerItem}}
 			{{else}}
-				{{#dropdownItem}}
-					<a class="menu-item-link" href="/portfolio/{{category.slug}}" style="background-color:{{category.color}};" title="{{category.title}}">
+				{{#dropdownItem color=category.color}}
+					<a class="menu-item-link" href="/portfolio/{{category.slug}}" title="{{category.title}}">
 						<h5><span class="tab-name">{{category.title}}</span></h5>
 					</a>
 				{{/dropdownItem}}
