--- a/client/partials/dropdown.html
+++ b/client/partials/dropdown.html
@@ -7,7 +7,7 @@
 </template>
 
 <template name="dropdownItem">
-	<li class="dropdown-item dropdown_item item {{class}}" style="background-color:{{color}}">
+	<li class="dropdown-item dropdown_item item {{class}}">
 		{{>Template.contentBlock}}
 	</li>
 </template>
