fix dropdown trigger link

--- a/client/partials/search.html
+++ b/client/partials/search.html
@@ -34,7 +34,7 @@
 				</div>
 				{{else}}
 				<div class="empty-state">
-					НИЧЕГО НЕ НАЙДЕНО
+					Nothing found... please try searching for something elese
 				</div>
 				{{/if}}
 			{{/if}}
