--- a/client/styles/_menu.scss
+++ b/client/styles/_menu.scss
@@ -128,10 +128,7 @@
         height: 100%;
         padding: $space;
         align-items:center;
-        justify-content: center;
-        @media screen and (max-width: $fg-sm - 1) {
-          justify-content:flex-start;
-        }
+        justify-content:flex-start;
         display: flex;
         h5{
           @extend .fg-row;
@@ -179,6 +176,9 @@
     .action-list{
       min-height: 100%;
       justify-content: flex-end;
+      .item{
+        flex-grow:0;
+      }
     }
   }
 }
