--- a/client/styles/_main-layout.scss
+++ b/client/styles/_main-layout.scss
@@ -79,7 +79,7 @@
 
 	// background images container
 	.background-container{
-		position: absolute;
+		position: fixed;
 		min-width: 100%;
 		max-height: 100%;
 		height: inherit;
