--- a/client/styles/_main-layout.scss
+++ b/client/styles/_main-layout.scss
@@ -97,7 +97,7 @@
 			height: 100%;
 			background-repeat: no-repeat;
 			background-size: cover;
-			background-position: center;
+			background-position: center 25%;
 		}
 	}
 
